--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,21 +11,42 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
+        //解决方法数超过65535报错
+        multiDexEnabled true
     }
+
+    //multiDex的一些相关配置，优化编译速度
+    dexOptions {
+        preDexLibraries = false
+        //让它不要对Lib做preDexing
+        incremental true
+        //开启incremental dexing,优化编译效率，这个功能android studio默认是关闭的。
+        javaMaxHeapSize "2g"     //增加java堆内存大小
+    }
+
     buildTypes {
         release {
-            minifyEnabled false
+            zipAlignEnabled true  //是否支持zip
+            shrinkResources true  // 移除无用的resource文件
+            debuggable false  //是否支持调试
+            minifyEnabled true    //是否进行混淆
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+
+    // 移除lint检查的error
+    lintOptions {
+        abortOnError false
     }
 }
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
-    compile 'com.android.support:appcompat-v7:25.0.1'
-    testCompile 'junit:junit:4.12'
+//    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+//        exclude group: 'com.android.support', module: 'support-annotations'
+//    })
+//    compile 'com.android.support:appcompat-v7:25.0.1'
+//    testCompile 'junit:junit:4.12'
     compile project(':vplibrary')
 }
